--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -85,19 +85,6 @@ html{
 .nav-link:hover{
     color:var(--mainText);
 }
-.notification {
-    text-decoration: none;
-    position: relative;
-    display: inline-block;
-    margin-right: 5px;
-}
-.notification .badge {
-    color: red;
-    position: absolute;
-    top: -6px;
-    right: -18px;
-    border-radius: 50%;
-}
 .mobile-navbar-btn{
     display: flex;
     background: transparent;
@@ -332,13 +319,15 @@ html{
 .heading--text{
     font-size: 1.3rem;
     line-height: 1.5;
-    font-weight: 650;
+    font-weight: 670;
     height: 1.5em;
 }
 .card--title--text{
     display: block;
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.6;
+    font-weight: 500;
+    color: rgb(90, 90, 90);
     height: 1.5em;
 }
 .project--body--edit{
@@ -376,8 +365,10 @@ html{
 }
 .about--me{
     line-height: 1.8;
+    font-weight: 500;
     font-size: 1em;
-    color: rgb(44, 44, 44);
+    /* color: rgb(44, 44, 44); */
+    color: rgb(90, 90, 90);
 }
 
 /* Skills section */
@@ -389,7 +380,7 @@ html{
     color: var(--mainText);
 }
 .skills--container{
-    width: 600px;
+    width: 700px;
     margin: 0 auto;
 }
 .skill--wrapper{
@@ -405,8 +396,9 @@ html{
 }
 .skill--body{
     line-height: 1.5;
-    font-size: 1rem;
-    color: rgb(70, 69, 69);
+    font-size: 1em;
+    font-weight: 500;
+    color: rgb(90, 90, 90);
 }
 .skill_edit{
     display: flex;
@@ -459,8 +451,8 @@ html{
 .contact-form-section{
     line-height: 1.4;
     font-size: 1rem;
-    /* background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)); */
-    background-color: var(--mainColor);
+    background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8));
+    /* background-color: var(--mainColor); */
     color: #444343;
     font-weight: 500;
     padding-top: 2em;
@@ -469,8 +461,8 @@ html{
 .contact-form-section .title{
     letter-spacing: 3px;
     text-transform: uppercase;
-    color: var(--mainText);
-    /* color: #fff; */
+    /* color: var(--mainText); */
+    color: #fff;
     line-height: 2;
     font-size: 2rem;
 }
